Fix compass hover effect on Firefox

--- a/public/style.css
+++ b/public/style.css
@@ -302,7 +302,8 @@ a:hover .overlay .compass{
 
 .overlay .compass{
 	position: relative;
-	top: 50%;
+	top: calc(50% - 75px);
+	height: 150px;
 	-ms-transform: rotate(45deg);
 	-webkit-transform: rotate(45deg);
 	transform: rotate(45deg);
